ai-ml-platform/ray-gke/kuberay/juptyerhub/hub/deployment.yaml
---
# Source: jupyterhub/templates/hub/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hub
  labels:
    component: hub
    app: jupyterhub
    release: release-name
    chart: jupyterhub-3.3.8
    heritage: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      component: hub
      app: jupyterhub
      release: release-name
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        component: hub
        app: jupyterhub
        release: release-name
        hub.jupyter.org/network-access-proxy-api: "true"
        hub.jupyter.org/network-access-proxy-http: "true"
        hub.jupyter.org/network-access-singleuser: "true"
      annotations:
        checksum/config-map: c9ca2efaa6fe526b50f8a48ee1a10face2e20ed9652e9b869287b2dd1a33c195
        checksum/secret: 867eb5aa9c2bda1ba2f487b4bda0ec767aca15928b1ae48148cdb6f3c3eb63d8
    spec:
      tolerations:
      - effect: NoSchedule
        key: hub.jupyter.org/dedicated
        operator: Equal
        value: core
      - effect: NoSchedule
        key: hub.jupyter.org_dedicated
        operator: Equal
        value: core
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            preference:
              matchExpressions:
              - key: hub.jupyter.org/node-purpose
                operator: In
                values: [core]
      volumes:
      - name: config
        configMap:
          name: hub
      - name: secret
        secret:
          secretName: hub
      - name: pvc
        persistentVolumeClaim:
          claimName: hub-db-dir
      serviceAccountName: hub
      securityContext:
        fsGroup: 1000
      containers:
      - name: hub
        image: quay.io/jupyterhub/k8s-hub:3.3.8
        args:
        - jupyterhub
        - --config
        - /usr/local/etc/jupyterhub/jupyterhub_config.py
        - --upgrade-db
        volumeMounts:
        - mountPath: /usr/local/etc/jupyterhub/jupyterhub_config.py
          subPath: jupyterhub_config.py
          name: config
        - mountPath: /usr/local/etc/jupyterhub/z2jh.py
          subPath: z2jh.py
          name: config
        - mountPath: /usr/local/etc/jupyterhub/config/
          name: config
        - mountPath: /usr/local/etc/jupyterhub/secret/
          name: secret
        - mountPath: /srv/jupyterhub
          name: pvc
        securityContext:
          allowPrivilegeEscalation: false
          runAsGroup: 1000
          runAsUser: 1000
        ports:
        - name: http
          containerPort: 8081
        livenessProbe:
          initialDelaySeconds: 300
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 30
          httpGet:
            path: /hub/health
            port: http
        readinessProbe:
          initialDelaySeconds: 0
          periodSeconds: 2
          timeoutSeconds: 1
          failureThreshold: 1000
          httpGet:
            path: /hub/health
            port: http
